# opusfile

./: .appveyor.yml  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  AUTHORS  Brewfile  CMakeLists.txt  Makefile.am  README.md  appveyor.yml  autogen.sh  configure.ac  opusfile-uninstalled.pc.in  opusfile.pc.in  opusfileConfig.cmake  opusfileConfig.cmake.in  opusurl-uninstalled.pc.in  opusurl.pc.in  releases.sha2
.github/workflows/: action.yml  actions.yml  autotools.yml
ci/: autotools.sh  unix.sh
cmake/: FindOgg.cmake  FindOpus.cmake
doc/: Doxyfile  Doxyfile.in  Makefile  git-version.sh  release.md  release.txt
examples/: opusfile_example.c  seeking_example.c  win32utf8.c
include/: opusfile.h
include/opus/: opusfile.h
mingw/: Dockerfile  Makefile  README.md  README.mingw
src/: http.c  info.c  internal.c  internal.h  opusfile.c  stream.c  wincerts.c  winerrno.h
src/win32/: winerrno.h  wsockwrapper.c  wsockwrapper.h
unix/: Makefile
win32/: opusfile.def
win32/VS2010/: opusfile_example.vcxproj  seeking_example.vcxproj
win32/VS2015/: opusfile.sln  opusfile.vcxproj  opusfile_example.vcxproj  seeking_example.vcxproj
win32/VS2017/: opusfile.sln  opusfile.vcxproj  opusfile_example.vcxproj  seeking_example.vcxproj
